-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.418 2009-02-13 19:07:42 guru Exp $
-----------------------------------------------------------------------------------------
-----------------------------------------------------------------------------------------
2009-02-15
	* GMT 4.4.0 finalized and released
-----------------------------------------------------------------------------------------
2009-02-14	pwessel
	* x2sys/x2sys_init.c:	Failed to set units/method defaults if -G was set and no -C/N specified.

2009-02-13	pwessel
	* website/*:		Scripts and makefile modified to deal with new arrangement
				of files in share/doc.  Simplified web site test and update.

2009-02-13	remko
	* share/doc:		New directory moved from www/gmt
	* share/doc/html/index.html:	Copy of gmt_services.html (for practicality)
	* share/doc/html/man:	New location for html manpages
	* guru/webman.sh:	Fixed broken links to #anchor in gmtdefaults.html
	* guru/*man.sh:		Moving output to new location: share/doc/html/{man,pdf}
	* guru/*.lis:		Manpages in new location
	* doc/GNUmakefile:	No more "make install". Directly puts html and pdf output in new
				location share/doc/pdf
	* configure.ac:		Removed --enable-www option. Had no effect.
	* makegmt.macros.in:	Removed wwwdir, introduced docdir variable.
	* GMT.in:		Replaced "web documents" by "documentation".
	* Makefile:		Replaced "(un)install-www" by "(un)install-doc"
	* GNUmakefile:		Make "install-doc" depend on "webman" and "pdfman".
				New origins for pdf tarball.

2009-02-07	jluis

2009-02-08	jluis
	* ps2raster.c:		For the +proj=latlong case use the original coordinates in %%PROJ line
	* gmt_plot.c:		Create the +proj=latlong case when GMT_LINEAR && GMT_IS_MAPPING 

2009-02-07	remko
	* utilmeca.c, submeca.c:	Replaced datan2() function with d_atan2() macro (which uses
				standard atan2() function. This also to avoid some possible bugs.