@@ -2,8 +2,8 @@
 \fItracks\fP
 Can be one or more ASCII, native binary, or COARDS netCDF 1-D data files.
 To supply the data files via a text file with a list of tracks (one per record),
-specify the name of the track list after a leading colon
-(e.g., :tracks.lis).  If the names are missing their file extension we will
+specify the name of the track list after a leading equal-sign
+(e.g., =tracks.lis).  If the names are missing their file extension we will
 append the suffix specified for this \fITAG\fP.  Track files will be searched
 for first in the current directory and second in all directories listed in
 \fB$X2SYS_HOME\fP/\fITAG\fP/\fITAG\fP_paths.txt (if it exists). [If \fB$X2SYS_HOME\fP
